--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "cypress:run": "cypress run"
   },
   "devDependencies": {
-    "cypress": "^15.1.0",
-    "esbuild": "^0.18.0",
-    "@bahmutov/cypress-esbuild-preprocessor": "^2.0.0",
-    "@badeball/cypress-cucumber-preprocessor": "^16.0.0"
+    "@badeball/cypress-cucumber-preprocessor": "^22.0.1",
+    "@bahmutov/cypress-esbuild-preprocessor": "^2.2.4",
+    "@faker-js/faker": "^9.6.0",
+    "cypress": "^14.2.1",
+    "cypress-cucumber-preprocessor": "^4.3.1"
+  },
+  "cypress-cucumber-preprocessor": {
+    "nonGlobalStepDefinitions": false,
+    "stepDefinitions": "cypress/e2e/PageObjects"
   }
 }
